--- a/bookapp/src/app/book/book.component.html
+++ b/bookapp/src/app/book/book.component.html
@@ -12,63 +12,36 @@
     <div class="col-xl-12 mb-30">
       <div class="card card-statistics h-100">
         <div class="card-body">
-          <h5 class="card-title">Employee</h5>
-          <form #societyForm="ngForm" (submit)="saveBook()">
+          <h5 class="card-title">Manage Book</h5>
+          <form #bookForm="ngForm" (submit)="saveBook()">            
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <label>Name</label>
+                  <label for="name">Name</label>
                   <input type="text" class="web form-control" [(ngModel)]="selectedBook.name" placeholder="Name" name="name">
                 </div>
-
               </div>
               <div class="form-row">
                   <div class="form-group col-md-6">
-                      <label for="inputEmail4">Designation</label>
-                      <input type="text" class="web form-control" [(ngModel)]="selectedBook.designation" placeholder="Designation" name="designation">
+                      <label for="numberOfPages">Number Of Pages</label>
+                      <input type="text" class="web form-control" [(ngModel)]="selectedBook.numberOfPages" placeholder="Number Of Pages" name="numberOfPages">
                   </div>
-
-            </div>
+              </div>
               <div class="form-row">
                   <div class="form-group col-md-6">
-                      <label for="inputEmail4">Address</label>
-                      <input type="text" class="web form-control" [(ngModel)]="selectedBook.address" placeholder="Address" name="address">
+                      <label for="dateOfPublication">Date Of Publication</label>
+                      <input type="text" class="web form-control" bsDatepicker [bsConfig]="{ dateInputFormat: 'MM/DD/YYYY' }" #dpDateOfPublication="bsDatepicker"
+                      value="{{selectedBook.dateOfPublication * 1000 | date:'MM/dd/yyyy'}}" (bsValueChange)="onValueChange($event)" placeholder="MM/DD/YYYY" name="dateOfPublication">
                   </div>
-
-            </div>
-            <div class="form-row">
+              </div>  
+              <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label for="inputEmail4">Mobile</label>
-                    <input type="text" class="web form-control" [(ngModel)]="selectedBook.mobile" placeholder="Mobile" name="mobile">
+                    <label for="inputEmail4">Authors</label>
+                    <tag-input type="text"  theme='bootstrap' [(ngModel)]="autherList" placeholder="Authors" name="autherList"></tag-input>
                 </div>
-
-          </div>
-          <div class="form-row">
-              <div class="form-group col-md-6">
-                  <label for="inputEmail4">Phone</label>
-                  <input type="text" class="web form-control" [(ngModel)]="selectedBook.phone" placeholder="Phone" name="phone">
               </div>
-
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="inputEmail4">Salary</label>
-                <input type="text" class="web form-control" [(ngModel)]="selectedBook.salary" placeholder="Salary" name="salary">
-            </div>
-
-      </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputDescription">Description</label>
-                <input type="text" class="web form-control" [(ngModel)]="selectedBook.description" placeholder="Description" name="description">
-              </div>
-
-
-            </div>
               <button class="btn btn-primary" type="submit" >Save</button>
               <button class="btn" (click)="cancelOnClick()" type="button">Cancel</button>
             </form>
-
-
         </div>
       </div>
     </div>
@@ -82,25 +55,23 @@
           <div class="table-responsive">
             <table class="table center-aligned-table mb-0">
               <thead><tr class="text-dark">
-                <th>Designation</th>
                 <th>Name</th>
-                <th>Address</th>
-                <th>Mobile</th>
-                <th>Phone</th>
+                <th>Number Of Pages</th>
+                <th>Date Of Publication</th>
+                <th>Authors</th>
 
                 <th>Action</th>
               </tr></thead>
               <tbody>
-                <tr *ngFor="let item of listEmployees">
-                  <td>{{item.designation}}</td>
+                <tr *ngFor="let item of listBooks">
                   <td>{{item.name}}</td>
-                  <td>{{item.address}}</td>
-                  <td>{{item.mobile}}</td>
-                  <td>{{item.phone}}</td>
+                  <td>{{item.numberOfPages}}</td>
+                  <td>{{item.dateOfPublication * 1000 | date:'yyyy-MM-dd'}}</td>
+                  <td>{{item.authors.join(', ')}}</td>
 
                   <td>
-                    <button type="button" (click)="editSocietyEmployees(item)" class="btn btn-success btn-sm mr-2"><i class="fa fa-edit"></i>Edit</button>
-                    <button type="button" (click)="deleteSocietyEmployee(item)" class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i>Delete</button>
+                    <button type="button" (click)="editBook(item)" class="btn btn-success btn-sm mr-2"><i class="fa fa-edit"></i>Edit</button>
+                    <button type="button" (click)="deleteBook(item)" class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i>Delete</button>
                   </td></tr>
               </tbody>
             </table>
